fixed star rating on mobile

--- a/SwipeSaver/static/style.css
+++ b/SwipeSaver/static/style.css
@@ -142,6 +142,14 @@ body {
     .calorie-header{
         display: none !important;
     }
+
+    .rate-message-style {
+        padding: 10px 10px !important;
+    }
+
+    .star-rating{
+        gap: 0px !important;
+    }
     
 }
 
